Updated ReadMe and images

--- a/financial_planning_tools.ipynb
+++ b/financial_planning_tools.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last updated: 2022-10-28T16:05:06.021380-07:00\n",
+      "\n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.7.13\n",
+      "IPython version      : 7.31.1\n",
+      "\n",
+      "Compiler    : Clang 12.0.0 \n",
+      "OS          : Darwin\n",
+      "Release     : 22.1.0\n",
+      "Machine     : x86_64\n",
+      "Processor   : i386\n",
+      "CPU cores   : 8\n",
+      "Architecture: 64bit\n",
+      "\n",
+      "json            : 2.0.9\n",
+      "alpaca_trade_api: 2.3.0\n",
+      "pandas          : 1.3.5\n",
+      "requests        : 2.27.1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from watermark import watermark\n",
+    "print(watermark())\n",
+    "print(watermark(iversions=True, globals_=globals()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +82,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -150,34 +187,34 @@
       "{\n",
       "    \"data\": {\n",
       "        \"1\": {\n",
-      "            \"circulating_supply\": 19185793,\n",
+      "            \"circulating_supply\": 19192050,\n",
       "            \"id\": 1,\n",
-      "            \"last_updated\": 1666386270,\n",
+      "            \"last_updated\": 1666997988,\n",
       "            \"max_supply\": 21000000,\n",
       "            \"name\": \"Bitcoin\",\n",
       "            \"quotes\": {\n",
       "                \"USD\": {\n",
-      "                    \"market_cap\": 368183048649,\n",
-      "                    \"percent_change_1h\": -0.375368123931018,\n",
-      "                    \"percent_change_24h\": 0.669610628495724,\n",
-      "                    \"percent_change_7d\": -1.12431265196781,\n",
-      "                    \"percentage_change_1h\": -0.375368123931018,\n",
-      "                    \"percentage_change_24h\": 0.669610628495724,\n",
-      "                    \"percentage_change_7d\": -1.12431265196781,\n",
-      "                    \"price\": 19166.01,\n",
-      "                    \"volume_24h\": 30768786055\n",
+      "                    \"market_cap\": 395449708913,\n",
+      "                    \"percent_change_1h\": 0.023631190133965,\n",
+      "                    \"percent_change_24h\": 1.63589127666906,\n",
+      "                    \"percent_change_7d\": 8.29610323502956,\n",
+      "                    \"percentage_change_1h\": 0.023631190133965,\n",
+      "                    \"percentage_change_24h\": 1.63589127666906,\n",
+      "                    \"percentage_change_7d\": 8.29610323502956,\n",
+      "                    \"price\": 20610.0,\n",
+      "                    \"volume_24h\": 37048684498\n",
       "                }\n",
       "            },\n",
       "            \"rank\": 1,\n",
       "            \"symbol\": \"BTC\",\n",
-      "            \"total_supply\": 19185793,\n",
+      "            \"total_supply\": 19192050,\n",
       "            \"website_slug\": \"bitcoin\"\n",
       "        }\n",
       "    },\n",
       "    \"metadata\": {\n",
       "        \"error\": null,\n",
       "        \"num_cryptocurrencies\": 3116,\n",
-      "        \"timestamp\": 1666386270\n",
+      "        \"timestamp\": 1666997988\n",
       "    }\n",
       "}\n"
      ]
@@ -194,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -206,34 +243,34 @@
       "{\n",
       "    \"data\": {\n",
       "        \"1027\": {\n",
-      "            \"circulating_supply\": 120523829,\n",
+      "            \"circulating_supply\": 120521705,\n",
       "            \"id\": 1027,\n",
-      "            \"last_updated\": 1666386270,\n",
-      "            \"max_supply\": 120523829,\n",
+      "            \"last_updated\": 1666997986,\n",
+      "            \"max_supply\": 120521705,\n",
       "            \"name\": \"Ethereum\",\n",
       "            \"quotes\": {\n",
       "                \"USD\": {\n",
-      "                    \"market_cap\": 157142103456,\n",
-      "                    \"percent_change_1h\": -0.255568800544221,\n",
-      "                    \"percent_change_24h\": 1.51265261681753,\n",
-      "                    \"percent_change_7d\": 1.05585619348074,\n",
-      "                    \"percentage_change_1h\": -0.255568800544221,\n",
-      "                    \"percentage_change_24h\": 1.51265261681753,\n",
-      "                    \"percentage_change_7d\": 1.05585619348074,\n",
-      "                    \"price\": 1301.77,\n",
-      "                    \"volume_24h\": 8999518884\n",
+      "                    \"market_cap\": 187651867668,\n",
+      "                    \"percent_change_1h\": -0.0058135847352633,\n",
+      "                    \"percent_change_24h\": 2.6285227636833,\n",
+      "                    \"percent_change_7d\": 21.4662281709252,\n",
+      "                    \"percentage_change_1h\": -0.0058135847352633,\n",
+      "                    \"percentage_change_24h\": 2.6285227636833,\n",
+      "                    \"percentage_change_7d\": 21.4662281709252,\n",
+      "                    \"price\": 1557.25,\n",
+      "                    \"volume_24h\": 16115128594\n",
       "                }\n",
       "            },\n",
       "            \"rank\": 2,\n",
       "            \"symbol\": \"ETH\",\n",
-      "            \"total_supply\": 120523829,\n",
+      "            \"total_supply\": 120521705,\n",
       "            \"website_slug\": \"ethereum\"\n",
       "        }\n",
       "    },\n",
       "    \"metadata\": {\n",
       "        \"error\": null,\n",
       "        \"num_cryptocurrencies\": 3116,\n",
-      "        \"timestamp\": 1666386270\n",
+      "        \"timestamp\": 1666997986\n",
       "    }\n",
       "}\n"
      ]
@@ -257,18 +294,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "19166.01"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current price of BTC is $ 20610.0\n"
+     ]
     }
    ],
    "source": [
@@ -276,23 +310,20 @@
     "btc_price = btc_response[\"data\"][\"1\"][\"quotes\"][\"USD\"][\"price\"]\n",
     "\n",
     "# Print the current price of BTC\n",
-    "btc_price\n"
+    "print(f\"The current price of BTC is $\",btc_price)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1301.77"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current price of ETH is $ 1557.25\n"
+     ]
     }
    ],
    "source": [
@@ -300,7 +331,7 @@
     "eth_price = eth_response[\"data\"][\"1027\"][\"quotes\"][\"USD\"][\"price\"]\n",
     "\n",
     "# Print the current price of ETH\n",
-    "eth_price\n"
+    "print(f\"The current price of ETH is $\", eth_price)\n"
    ]
   },
   {
@@ -312,18 +343,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "22999.211999999996"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current value of your holding in BTC is $ 24732.0\n"
+     ]
     }
    ],
    "source": [
@@ -331,23 +359,20 @@
     "btc_value = btc_price * btc_coins\n",
     "\n",
     "# Print current value of your holding in BTC\n",
-    "btc_value\n"
+    "print(f\"The current value of your holding in BTC is $\", btc_value)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6899.380999999999"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current value of your holding in ETH is $ 8253.425\n"
+     ]
     }
    ],
    "source": [
@@ -355,23 +380,20 @@
     "eth_value = eth_price * eth_coins\n",
     "\n",
     "# Print current value of your holding in ETH\n",
-    "eth_value\n"
+    "print(f\"The current value of your holding in ETH is $\", eth_value)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "29898.592999999993"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current value of your cryptocurrency wallet is $ 32985.43\n"
+     ]
     }
    ],
    "source": [
@@ -380,7 +402,7 @@
     "total_crypto_wallet = btc_value + eth_value\n",
     "\n",
     "# Print current cryptocurrency wallet balance\n",
-    "total_crypto_wallet\n"
+    "print(f\"The current value of your cryptocurrency wallet is ${total_crypto_wallet: .2f}\")\n"
    ]
   },
   {
@@ -419,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +625,7 @@
        "2022-10-19 04:00:00+00:00       531675  368.665769    SPY  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +750,7 @@
        "2022-10-19 04:00:00+00:00  94.2  6295299       18782  94.314399  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,18 +777,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "94.2"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The AGG closing price is $ 94.2\n"
+     ]
     }
    ],
    "source": [
@@ -775,23 +794,20 @@
     "agg_close_price = portfolio_df.loc[start_date, (\"AGG\", \"close\")].astype(float)\n",
     "\n",
     "# Print the AGG closing price\n",
-    "agg_close_price"
+    "print(\"The AGG closing price is $\",agg_close_price)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "368.5"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The SPY closing price is $ 368.5\n"
+     ]
     }
    ],
    "source": [
@@ -801,7 +817,7 @@
     "\n",
     "\n",
     "# Print the SPY closing price\n",
-    "spy_close_price\n"
+    "print(\"The SPY closing price is $\", spy_close_price)\n"
    ]
   },
   {
@@ -813,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -876,14 +892,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current cryptocurrency wallet balance is $ 29898.59\n"
+      "The current cryptocurrency wallet balance is $ 32985.43\n"
      ]
     }
    ],
@@ -1841,10 +1857,6 @@
    "cell_type": "code",
    "execution_count": 103,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1939,7 +1951,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Step 3: Plot the probability distribution of the Monte Carlo simulation."
    ]
@@ -1948,10 +1962,6 @@
    "cell_type": "code",
    "execution_count": 104,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1976,7 +1986,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Step 4: Generate the summary statistics for the Monte Carlo simulation."
    ]
