--- a/financial_planning_tools.ipynb
+++ b/financial_planning_tools.ipynb
@@ -892,14 +892,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The current cryptocurrency wallet balance is $ 32985.43\n"
+     "ename": "NameError",
+     "evalue": "name 'total_crypto_wallet' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/4d/z57_76td03j5db8dyv4pwsvr0000gn/T/ipykernel_14790/2105917625.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Calculate the total value of the member's entire savings portfolio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Add the value of the cryptocurrency walled to the value of the total stocks and bonds\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtotal_portfolio\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtotal_crypto_wallet\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtotal_stocks_bonds\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Print current portfolio balance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'total_crypto_wallet' is not defined"
      ]
     }
    ],
@@ -908,8 +912,8 @@
     "# Add the value of the cryptocurrency walled to the value of the total stocks and bonds\n",
     "total_portfolio = total_crypto_wallet + total_stocks_bonds\n",
     "\n",
-    "# Print current cryptocurrency wallet balance\n",
-    "print(f\"The current cryptocurrency wallet balance is ${total_crypto_wallet: .2f}\")\n"
+    "# Print current portfolio balance\n",
+    "print(f\"The current portfolio balance is ${total_portfolio: .2f}\")\n"
    ]
   },
   {
